--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,10 @@ body {
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
+.logoutCard{
+  min-height: 25vh;
+}
+
 .addContact {
   background: white;
 }
